# CVRM2021-sjtu

./: .gitignore  CMakeLists.txt  README.md  auto_run.sh  main.cpp
UltraMultiThread/: CMakeLists.txt
UltraMultiThread/example/: example.cpp
UltraMultiThread/include/umt/: Message.hpp  ObjManager.hpp  umt.hpp
asset/: MV-SUA133GC.Config  autoaim-param.yml  camera-param.yml
autoaim/: CMakeLists.txt  FindTensorRT.cmake  autoaim.cpp  autoaim.hpp
autoaim/detector/: TRTModule.cpp  TRTModule.hpp
autoaim/predictor/: AdaptiveEKF.hpp  PredictorAdaptiveEKF.cpp  PredictorAdaptiveEKF.h  PredictorKalman.cpp  PredictorKalman.h  kalman.h
common/: CMakeLists.txt  common.cpp  common.hpp
core_io/: CMakeLists.txt  robot.cpp  robot.hpp  sensors.cpp  sensors.hpp
core_io/ExtImu/: ExtImu.cpp  ExtImu.hpp
core_io/MindVision/: MindVision.cpp  MindVision.hpp
core_io/MindVision/MVSDK/: CameraApi.h  CameraDefine.h  CameraStatus.h
core_io/serial/: CMakeLists.txt
example/: CMakeLists.txt  README.md  example.py  main.cpp  main.h  run_example.sh
members/: kwc.json
record/: CMakeLists.txt  record.cpp
script/: app.py  autoaim.py  bridge.py  record.py  robot_io.py  sensors_io.py
script/templates/: index.html  video.html
